--- a/public/css/style.css
+++ b/public/css/style.css
@@ -449,7 +449,7 @@ textarea {
 
 body {
   background: #000a12;
-  height: fit-content;
+  /* height: fit-content; */
   font-family: 'Roboto', sans-serif;
   font-weight: 700;
 }
@@ -516,7 +516,7 @@ body {
     ),
     #000a12;
   margin: 3px 3px 3px 3px;
-  width: 100%-2px;
+  /* width: 100%-2px; */
   height: 4em;
   max-height: 95px;
   display: flex;
@@ -560,7 +560,7 @@ body {
 
 .placeholder-card {
   margin: 1px 1px 1px 1px;
-  width: 100%-2px;
+  /*width: 100%-2px;*/
   height: 4em;
   display: flex;
   justify-content: center;
