--- a/views/login.pug
+++ b/views/login.pug
@@ -12,7 +12,7 @@ block content
         .container-signup-form
             .subtitle-container
                 h2.subtitle Log In
-                span.subtitle-sub A your cards in one place
+                span.subtitle-sub All your cards in one place
             form.signup-form
                 .form-group
                     // <label for="email">Email address</label>
